 * mod_proxy: Add the possibility to set a separate connection timeout for     backend workers.        PR: 45445            Trunk version of patch:                   http://svn.apache.org/viewvc?rev=684341&view=rev                       Backport version for 2.2.x of patch:                              Trunk version of patch works, but                                     http://people.apache.org/~rpluem/patches/37770_2.2.x.diff                                            fixes a conflict regarding the needed minor bump.                                                +1: rpluem, jim, jerenkrantz

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@696316 13f79535-47bb-0310-9956-ffa450edef68